--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,13 @@ html {
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -35,4 +35,290 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+/* Общая раскладка страницы */
+
+.content {
+  display: flex;
+  align-items: flex-end;
+  gap: 30px;
+  margin: auto;
+  padding: 133px 30px;
+}
+
+/* Видео и форма поиска */
+
+/* Контейнер с выбранным видео */
+
+.result__video-container {
+  position: relative;
+  width: 711px;
+  height: 392px;
+  margin-bottom: 12px;
+}
+
+/* Видео */
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* Форма поиска */
+
+/* Основной контейнер с формой */
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Сбрасываем рамки у fieldset */
+
+fieldset {
+  border: none;
+}
+
+/* Стили для поля ввода города, его состояний и плейсхолдера */
+
+.search-form__textfield {
+  width: 225px;
+  height: 27px;
+  border: none;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  padding-inline: 0;
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  text-align: left;
+  background-color: transparent;
+  appearance: none;
+}
+
+.search-form__textfield::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.search-form__textfield:active {
+  border: 1px solid white;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__textfield:has(:focus-visible) {
+  outline: 1px solid white;
+  outline-offset: 2px;
+}
+
+/* Класс для скрытия элементов в форме */
+
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+/* Заголовки наборов в форме поиска */
+
+.search-form__fieldset-title {
+  margin-bottom: 5px;
+  color: #fff;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+/* Общий контейнер для всех трех чекбоксов и лейблов к ним */
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+/* Контейнер с отдельным чекбоксом и лейблом к нему */
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  width: fit-content;
+}
+
+/* Отображение новых чекбоксов вместо стандартных и их состояния */
+
+.search-form__pseudo-checkbox {
+  display: block;
+  width: 19px;
+  height: 19px;
+  border: 1px white solid;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox {
+  box-shadow: 0px 0px 0px 1px #1b1919 inset;
+  background-color: #fff;
+}
+
+.search-form__label:hover {
+  text-decoration: underline 1px;
+  text-underline-offset: 2px;
+}
+
+.search-form__label:focus {
+  outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid white;
+  outline-offset: 2px;
+}
+
+/* Общие стили для всех кнопок и их состояний */
+
+.button {
+  height: 34px;
+  border: 1px solid currentColor;
+  color: #fff;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.button:active {
+  background-color: #acacac;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:focus {
+  text-decoration: underline 1px;
+  text-underline-offset: 1px;
+}
+
+.button:focus-visible {
+  outline: 1px solid white;
+  outline-offset: 2px;
+}
+
+/* Стили для кнопки поиска */
+
+.search-form__submit-button {
+  align-self: flex-end;
+  width: 194px;
+  min-height: 34px;
+}
+
+/* Заголовок формы и список видео */
+
+/* Стили заголовка формы */
+
+.title {
+  margin-bottom: 26px;
+  font-family: Oswald, sans-serif;
+  font-size: 75px;
+  line-height: 70.5px;
+  text-transform: uppercase;
+}
+
+/* Акцентная часть заголовка с другим цветом */
+
+.content__accent {
+  color: #545050;
+}
+
+/* Список с результатами поиска со скроллом */
+
+.content__list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  height: 298px;
+  overflow: scroll;
+}
+
+/* Стили карточки и ее состояния */
+
+.content__video-card {
+  display: flex;
+  justify-content: end;
+  align-content: flex-end;
+}
+
+.content__card-link {
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  margin: 2px;
+}
+
+.content__card-link:active, .content__card-link_current{
+  background-color: #545050;
+}
+
+.content__card-link:hover{
+  text-decoration: underline 1px;
+  text-underline-offset: 2px;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible  {
+  outline: 1px solid white;
+}
+
+/* Стили картинки с превью в карточках */
+
+.content__video-card-thumbnail {
+  display: block;
+  flex-shrink: 0;
+  align-self: end;
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* Стили блока с описанием в карточках */
+
+.content__video-card-description-container {
+  flex-grow: 1;
+  padding: 2px 0px 4px 2px;
+  text-decoration: none;
+}
+
+.content__video-card-title {
+  font-family: Oswald;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  font-family: Fira Sans Condensed;
+  font-weight: 400;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+/* Стили для кнопки "Показать еще" в списке карточек */
+
+.more-button {
+  width: 100%;
 }
