--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ ol {
   align-items: flex-end;
   gap: 30px;
   margin: auto;
-  padding: 0 30px;
+  padding: 133px 30px;
 }
 
 /* Видео и форма поиска */
