--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,9 @@ html {
   background-color: #1b1919;
   inline-size: 1200px;
   block-size: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 h1,
@@ -43,8 +46,7 @@ ol {
   display: flex;
   align-items: flex-end;
   gap: 30px;
-  margin: auto;
-  padding: 133px 30px;
+  margin: 0 30px;
 }
 
 /* Видео и форма поиска */
