--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,7 @@ ol {
   display: flex;
   align-items: flex-end;
   gap: 30px;
+  min-width: 1140px;
   margin: 0 30px;
 }
 
@@ -161,14 +162,15 @@ ol {
 
 /* Отображение новых чекбоксов вместо стандартных и их состояния */
 
-.search-form__pseudo-checkbox {
+.search-form__pseudo-checkbox::before {
+  content: '';
   display: block;
   width: 19px;
   height: 19px;
   border: 1px white solid;
 }
 
-.search-form__checkbox:checked + .search-form__pseudo-checkbox {
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
   box-shadow: 0px 0px 0px 1px #1b1919 inset;
   background-color: #fff;
 }
@@ -205,12 +207,12 @@ ol {
 }
 
 .button:hover {
-  text-decoration: underline;
+  text-decoration: underline 1px;
+  text-underline-offset: 1px;
 }
 
 .button:focus {
-  text-decoration: underline 1px;
-  text-underline-offset: 1px;
+  outline: none;
 }
 
 .button:focus-visible {
@@ -234,7 +236,7 @@ ol {
   margin-bottom: 26px;
   font-family: Oswald, sans-serif;
   font-size: 75px;
-  line-height: 70.5px;
+  line-height: 0.94;
   text-transform: uppercase;
 }
 
@@ -250,9 +252,14 @@ ol {
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 30px;
   height: 298px;
   overflow: auto;
+}
+
+/* Добавляем отступ всем элементам списка, кроме последнего */
+
+.content__list-item:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 /* Стили карточки и ее состояния */
@@ -309,13 +316,16 @@ ol {
 }
 
 .content__video-card-title {
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-size: 30px;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .content__video-card-description {
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   text-decoration: none;
